# Game_engine

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  readme.md
include/: engine.hpp  engine_constants.hpp  engine_types.hpp
lib/: libSDL2-2.0d.so.0
src/: engine.cpp  game.cpp
